k8s/ingress.yaml
# Example Ingress for Web Service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: thanhho.coffeeshop.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8888
  tls:
    - hosts:
        - thanhho.coffeeshop.com
      secretName: tls-secret
